--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
