--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,24 @@
-# Dependencies
-node_modules/
-
-# Build output
-dist/
-dist-ssr/
-*.local
-
-# Vite
-.vite/
-coverage/
-
-# IDE / System files
-.DS_Store
-Thumbs.db
-*.suo
-*.user
-*.userosscache
-*.sln
-*.DotSettings.user
-
-# Environment variables
-.env
-.env.*
-!/.env.example
-
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
