--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "controle-financeiro-familiar",
-  "version": "1.0.0",
-  "description": "Controle Financeiro Familiar App",
+  "name": "controle-financeiro-plus",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.1.0",
+    "react-router-dom": "^6.23.1",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.5.1",
-    "typescript": "^5.8.3",
-    "vite": "^5.4.19"
-  },
-  "main": "index.js"
+    "@types/node": "^22.14.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0"
+  }
 }
